# vedbsearch

./: LICENSE  README.md  pyproject.toml
vedbsearch/: __init__.py  client.py
